Grace/tests/gibbs/errors/t048.grace
// ERROR = P1031
method [ {
    print "Hello"
}
